# mange-ta-main

./: .gitignore  README.md  appspec.yml  pyproject.toml
.env/: pyvenv.cfg
.github/workflows/: deploy.yml
Data/raw/: import_data.py
scripts/: after_install.sh  before_install.sh  mange-ta-main.service  mange-ta-main.service.template  nginx.conf  start_application.sh  stop_application.sh
src/classe/: class-manger.py
src/mange-ta-main/: main.py
src/mange_ta_main/: 1_univariate_page_odz.ipynb  data.py  fx_main.py  main.py
src/mange_ta_main/assets/: __init__.py
src/mange_ta_main/pages/: 0_Healthyness.py  0_univariate_page_William.py  0_univariate_page_fx.py  0_univariate_page_odz.py  1.1_clustering trajectoire_William.py  1.2_préparation_steps_in time_William.py  1.4_Export_Streamlit_William.py  1_To_cook_or_Not_to_cook.py  1_univariate_page.py  1_univariate_page_odz.py  2_bivariate_page.py  2_bivariate_page_eric.py  2_bivariate_page_odz.py  3_multivariate_page.py  4_univariate_tags.py  Contributor_Activity_Analysis.py  Healthiness.py  Healthyness.py  Introduction_NutriCorrelation.py  Popular.py  Popular_Nutricional_Score.py  Popular_Recipes_Analysis.py  To_cook_or_Not_to_cook.py  Univariate_Tags.py  synthese_William.py
src/mange_ta_main/utils/: data_loader.py  logger.py  navbar.py  sidebar.py
