[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mange-ta-main"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = "==3.12.*"
license = "MIT"
keywords = []
authors = [
  { name = "Zaher Hamadeh", email = "hamadehzaher0@gmail.com" },
  { name = "François-Xavier Bonnefont", email = "bonnefontfx@gmail.com"}
  # ajoutez vos noms et emails ici
]

dependencies = [
    "numpy==2.3.*",
    "matplotlib==3.10.*",
    "pandas==2.3.*",
    "seaborn==0.13.*",
    "scikit-learn==1.7.*",
    "plotly==6.3.*",
    "nltk==3.9.*",
    "spacy==3.8.*",
    "gensim==4.3.*",
    "torch==2.8.*",
    "streamlit==1.50.*",
    "kagglehub[pandas-datasets]==0.3.*",
    "adjusttext==1.3.0"
]

[tool.hatch.envs.default.scripts]
app = "streamlit run src/mange_ta_main/main.py"
init_data = "python Data/raw/import_data.py"


[tool.hatch.build.targets.wheel]
packages = ["src/mange_ta_main"]


[tool.hatch.version]
path = "src/mange_ta_main/__about__.py"

[tool.hatch.envs.default]
type = "virtual"
path = ".env/"
installer = "uv"
python = "3.12"
